--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -782,9 +782,9 @@ header p {
   background-color: #ffeca0;
 }
 #banner .fork {
-  position: fixed;
-  left: 50%;
-  margin-left: -325px;
+  position: relative;
+  left: 36.2%;
+  margin-left: 0;
   padding: 10px 12px;
   margin-top: 6px;
   line-height: 14px;
