--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -109,8 +109,8 @@ audio,
 canvas,
 video {
   display: inline-block;
-  *display: inline;
-  *zoom: 1;
+  display: inline;
+  zoom: 1;
 }
 
 /*
@@ -412,7 +412,7 @@ legend {
   padding: 0;
   white-space: normal;
   /* 2 */
-  *margin-left: -7px;
+  margin-left: -7px;
   /* 3 */
 }
 
@@ -431,7 +431,7 @@ textarea {
   /* 2 */
   vertical-align: baseline;
   /* 3 */
-  *vertical-align: middle;
+  vertical-align: middle;
   /* 3 */
 }
 
@@ -458,7 +458,7 @@ input[type="submit"] {
   /* 1 */
   -webkit-appearance: button;
   /* 2 */
-  *overflow: visible;
+  overflow: visible;
   /* 3 */
 }
 
@@ -482,9 +482,9 @@ input[type="radio"] {
   /* 1 */
   padding: 0;
   /* 2 */
-  *height: 13px;
+  height: 13px;
   /* 3 */
-  *width: 13px;
+  width: 13px;
   /* 3 */
 }
 
@@ -949,13 +949,14 @@ footer {
   }
 
   #banner {
-    width: 100%;
+    /*display: none;*/
   }
-  #banner .downloads {
+
+  /*#banner .downloads {
     margin-right: 60px;
-  }
+  }*/
   #banner #logo {
-    margin-right: 15px;
+    /*margin-right: 15px;*/
   }
 
   section {
@@ -975,7 +976,8 @@ footer {
     width: auto;
   }
 }
-@media print, screen and (max-width: 720px) {
+
+@media print, screen and (max-width: 768px) {
   body {
     word-wrap: break-word;
   }
@@ -998,7 +1000,28 @@ footer {
 
   #banner {
     top: 80px;
+    left: 0px;
+    /*right: 0px;*/
+
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    /*margin: 0 auto;*/
+    position: fixed;
   }
+
+  #banner .linkdiv {
+    position: inherit;
+    padding: 0px;
+    margin-left: 6px;
+    left: 0px;
+  }
+
+  #banner #logo {
+    padding: 0px;
+    margin-right: 2px;
+  }
+
   #banner .fork {
     float: left;
     display: inline-block;
@@ -1008,7 +1031,7 @@ footer {
   }
 
   section {
-    margin-top: 130px;
+    margin-top: 150px;
     margin-bottom: 0px;
     width: auto;
   }
@@ -1017,6 +1040,7 @@ footer {
     position: static;
   }
 }
+
 @media print, screen and (max-width: 480px) {
   header {
     position: relative;
@@ -1032,18 +1056,39 @@ footer {
     -ms-text-overflow: ellipsis;
   }
 
-  section {
-    margin-top: 5px;
+  #banner {
+    top: 0px;
+    left: 0px;
+    /*right: 0px;*/
+
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    /*margin: 0 auto;*/
+    position: relative;
   }
 
-  #banner {
-    display: none;
+  /*#banner .linkdiv {
+    position: inherit;
+    padding: 0px;
+    margin-left: 6px;
+    left: 0px;
+  }
+
+  #banner #logo {
+    padding: 0px;
+    margin-right: 2px;
+  }*/
+
+  section {
+    margin-top: 5px;
   }
 
   header ul {
     display: none;
   }
 }
+
 @media print {
   body {
     padding: 0.4in;
@@ -1051,6 +1096,9 @@ footer {
     color: #444;
   }
 }
+
+
+
 @media print, screen and (max-height: 680px) {
   footer {
     text-align: center;
