will the tweets be centered? oh the suspense...
Signed-off-by: Mahathir Almashor <malmash@au1.ibm.com>

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1089,7 +1089,11 @@ footer {
   }
 }
 
-#tweetshow {
-  width: 100%;
-  text-align: center;
+
+blockquote {
+    padding-left: 10px;
+    margin: 0 auto;
+    width: auto;
+    max-width: 500px;
+    display: table;
 }
