sugihara and coderdojo. haaaai YAAAH!
Signed-off-by: Mahathir Almashor <malmash@au1.ibm.com>

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1089,6 +1089,14 @@ footer {
   }
 }
 
+.embed-img {
+  margin: 0 auto;
+  padding-top: 1em;
+  padding-bottom: 2em;
+  width: auto;
+  max-width: 400px;
+  display: table;
+}
 
 blockquote {
     padding-left: 10px;
